--- a/src/assets/scss/utilities/variables.scss
+++ b/src/assets/scss/utilities/variables.scss
@@ -47,6 +47,10 @@
 	$cvnavy     : #022531;
 	$neutral    : #E8E7E3;
 
+	// specials
+	$tmi_blue   : #009ABF;
+	$tmi_green  : #93D500;
+
 	// accent pallette
 	$yellow     : #D0DB42;
 	$red 		: #AA482E;
