--- a/src/assets/scss/layout/layout.billboard.scss
+++ b/src/assets/scss/layout/layout.billboard.scss
@@ -9,17 +9,97 @@
     // styles
     #video_billboard {
 
+        @include flex-h-j-v-s( false );
+
         height: 75vh;
+        min-height: 75vh;
+        padding: 5rem 0 0 0;
+
+        // mobile
+        @include breakpoint ( xlarge up ) {
+
+            height: 60vh;
+            min-height: 60vh;
+
+        }
+
+        // mobile
+        @include breakpoint ( medium down ) {
+
+            height: auto;
+
+            @include flex-v-t-h-st( false );
+
+        }
+
+        // mobile
+        @include breakpoint ( small only ) {
+
+            padding: 4rem 0 0 0;
+
+        }
 
         // content
         .billboard-content {
 
+            flex-grow: 1;
+
             width: 100vw;
+            height: 100%;
+            min-height: 100%;
+            padding: 0 0 0 0;
+
+            // mobile
+            @include breakpoint ( medium down ) {
+
+                height: 75vh;
+
+            }
+
+            // title
+            #homepage-title {
+
+                // mobile
+                @include breakpoint ( medium down ) {
+
+                    padding: 0 3rem 3rem 3rem;
+
+                }
+
+                // title
+                .title {
+
+                    // mobile
+                    @include breakpoint ( xlarge down ) {
+
+                        @include font( $klavislim, 3rem, 400 );
+
+                        @include typo( 3rem, 0.035em );
+
+                    }
+
+                }
+
+                // text
+                .text {
+
+                    // mobile
+                    @include breakpoint ( large only ) {
+
+                        margin: 1rem 0 0 0;
+
+                    }
+
+                }
+
+            }
 
         }
 
         // background
         #video_background {
+
+            // @include hide;
 
             position: absolute;
 
@@ -35,13 +115,13 @@
 
                 position: absolute;
 
-                top: -25%;
+                // top: -25%;
                 // right: 0;
                 // bottom: 0;
-                left: -25%;
+                // left: -25%;
 
-                width: 150%;
-                height: 150%;
+                width: 100%;
+                height: 100%;
 
                 object-fit: cover;
 
@@ -50,7 +130,7 @@
             // video
             video {
 
-                @include hide;
+                // @include hide;
 
                 object-fit: cover;
 
@@ -62,6 +142,27 @@
                 width: 100%;
 
                 object-fit: cover;
+
+            }
+
+        }
+
+        // announcements
+        .announcements {
+
+            width: 40vw;
+
+            // mobile
+            @include breakpoint ( large only ) {
+
+                width: 40%;
+
+            }
+
+            // mobile
+            @include breakpoint ( medium down ) {
+
+                width: 100%;
 
             }
 
